--- a/赛后总结.md
+++ b/赛后总结.md
@@ -1,3 +1,82 @@
 # 测绘技能大赛无人机赛项赛后总结
 
-##
+## 一、赛前准备
+
+### 计算机硬件和软件要求
+
+硬件要求：
+
+|系统支持|Windows10（64）|
+|:---:|:---:|
+|CPU |Intel Core i7十代处理器以上，内核数不少于8|
+|内存|32GB|
+|显卡|NVIDIA 显卡、显存6GB及以上，且型号不低于GTX2060（不支持 AMD 显卡）|
+|磁盘空间|固态硬盘，可用空间300GB以上|
+|摄像头|1080P摄像头，要求可清晰分辨人脸五官|
+
+软件要求：
+元穹、SouthUAV、SmartGIS
+25年元穹练习及内业软件
+链接: <https://pan.baidu.com/s/1pifmy0txiec6ncOwCBBqRw?pwd=1234>
+提取码: 1234
+
+注：学院机房的电脑无法支撑全部赛项，仅能完成外业测图部分，内业空三时极大概率闪退。
+
+### 赛事培训与训练准备
+
+**官方培训**
+每年在B站上都会有专门的赛事培训，赛前说明，赛后总结，涵盖所有赛项，都在[智绘未来](https://space.bilibili.com/1965733536?spm_id_from=333.788.upinfo.detail.click)的B站账号主页可以查到。[官方培训教程](https://www.bilibili.com/video/BV1k5LqzaEER/?spm_id_from=333.1387.favlist.content.click&vd_)讲的最细，适合刚接触的新手一步步跟着操作。视频内容基本将外业操作逐步讲解，但受限于内业部分实际操作的复杂情况和直播时长的限制，仍需要更多的学习资料加以补充。
+
+视频笔记：<https://github.com/ZhiwenZhang7/Drone-aerial-surveying/blob/main/%E7%BB%86%E8%8A%82%E6%95%B4%E7%90%86.docx>
+
+**民间分享**
+每年参赛选手中，有很多愿意分享比赛技巧和问题解答的选手，可以通过github、csdn和B站等等手段获取相应资源。在这里，我推荐几个较为优秀的资料：
+
+[完整练习实录](https://space.bilibili.com/3461581874661569/lists/5928463?type=season)<https://space.bilibili.com/3461581874661569/lists/5928463?type=season>
+
+[外业资料](https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)<https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
+
+[内业资料](https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)<https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
+
+**校内交流**
+除了在网络上获取学习资源，在校内与其它参赛选手交流同样重要，每个人遇到的问题和错误不同，学习对方的经验教训能够跳过很多弯路。
+
+**训练计划**
+在比赛前的一个月内，建议一周训练时长不低于6小时，一周至少进行两次完整流程的航测操作。在外业技能熟练后，可将一周完整训练次数减少到一次，但训练时长依旧建议不低于6小时，可使用同样的外业数据反复进行单体化建模操作，强化训练记忆并尝试不同的建模贴图方法。
+
+## 二、正式比赛
+
+**赛前文件**
+通常，赛前一小时会发布赛事文件，请仔细阅读并与同校的参赛队友讨论包括但不限于航线规划，子午线计算，参数设定等部分的内容，保证外业部分快速顺利进行。
+
+尽量采用保守的航线规划，外业软件在提交后禁止再次进入，无人机炸机则直接退赛，在保证完赛的前提下，尽量提高航线飞行效率和拍摄效率。
+
+确保中央子午线计算正确，防止出现内业导入测区范围时模型不存在而导致的退赛。
+
+**外业工作**
+详情步骤见培训资料，请务必确保每一步都妥善完成，且最后回收仪器，每一步都有分数计算，尽量将此处分数拿满（**拍摄质量不影响评分**）。
+
+**数据建模**
+空三和快速建模是整个赛项中最耗时的部分也是操作量最小的部分，因此，绝大部分选手会在此时进行报告撰写。
+
+如果建模顺利，可直接转战第三步；但如果建模效果一般或效果不佳，请仔细考量时间，通常**自由网空三**需要**10-15分钟**，**快速建模**需要**10-20分钟**，如时间不足，直接转战第三步以保证完赛；如建模失败，若剩余时间不多，尝试直接提交以保证操作分数，否则立刻从头开始进行操作，放弃错误排查（**排查错误可能花费更多时间**）。注意**保存路径**，确保第三步文件打开时能够快速找到osjb模型。
+
+**单体化建模**
+单体化建模是整个赛项的核心步骤，重点在于按照要求绘房后的切割与纹理贴图工作，如何让模型更符合实际情况？贴合快速建模成果？
+
+**补拍得到的图片是重中之重**！！
+
+补拍得到的照片能为我们提供大量纹理图片，提供模型的大概位置，在补拍时就应当刻意搜集目标建筑的**所有纹理图片**，为构建完整通用纹理库做准备。
+
+**结果提交**
+请注意，比赛结束是在我们点击结束赛程后，而不是提交完所有文件后结束，为了尽量留存时间分，请在检查无误后尽快提交，检查是否已经推出了程序，切勿因超时取消比赛资格。
+
+比赛时间充裕，仅需以在规定时间内完赛为目标操作即可。
+
+## 三、其它注意事项
+
+训练场地可向指导老师申请，最好采用集中训练和封闭训练模式，一次性完成整个训练过程更有帮助。
+
+设备问题积极与南方测绘方面沟通，与老师讨论解决设备硬件问题，在比赛前三天应当确定并准备好所有比赛设备（对单设备不自信可以准备双设备减少意外）。
+
+备赛成果与经验可以整理成书面文档，不仅方便自己整理思路，发表到csdn或github上也可做为一定的计算机博客经验积累。
