--- a/赛后总结.md
+++ b/赛后总结.md
@@ -18,6 +18,7 @@
 元穹、SouthUAV、SmartGIS
 25年元穹练习及内业软件
 链接: <https://pan.baidu.com/s/1pifmy0txiec6ncOwCBBqRw?pwd=1234>
+
 提取码: 1234
 
 注：学院机房的电脑无法支撑全部赛项，仅能完成外业测图部分，内业空三时极大概率闪退。
@@ -32,11 +33,11 @@
 **民间分享**
 每年参赛选手中，有很多愿意分享比赛技巧和问题解答的选手，可以通过github、csdn和B站等等手段获取相应资源。在这里，我推荐几个较为优秀的资料：
 
-[完整练习实录](https://space.bilibili.com/3461581874661569/lists/5928463?type=season)<https://space.bilibili.com/3461581874661569/lists/5928463?type=season>
+[完整练习实录](https://space.bilibili.com/3461581874661569/lists/5928463?type=season)：<https://space.bilibili.com/3461581874661569/lists/5928463?type=season>
 
-[外业资料](https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)<https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
+[外业资料](https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)：<https://blog.csdn.net/hcy_forever/article/details/124452601?fromshare=blogdetail&sharetype=blogdetail&sharerId=124452601&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
 
-[内业资料](https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)<https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
+[内业资料](https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link)：<https://blog.csdn.net/hcy_forever/article/details/124637585?fromshare=blogdetail&sharetype=blogdetail&sharerId=124637585&sharerefer=PC&sharesource=2401_83231980&sharefrom=from_link>
 
 **校内交流**
 除了在网络上获取学习资源，在校内与其它参赛选手交流同样重要，每个人遇到的问题和错误不同，学习对方的经验教训能够跳过很多弯路。
